--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,10 @@
 <div class="container">
-    <app-parent></app-parent>
+
+    <p appImportant [bgColor]="'red'" [textColor]="'green'" >Important Stuff here</p>
+    <br />
+    <br />
+    <p appImportant [bgColor]="'green'" [textColor]="'black'" >Important Stuff here</p>
+    <br />
+    <br />
+    <p appImportant >Important Stuff here</p>
 </div>
